# Real-Time-Risk-Analytics-Platform

./: .replit  README.md  app.py  pyproject.toml
.streamlit/: config.toml
attached_assets/: Pasted--Real-Time-Risk-Analytics-Platform-A-comprehensive-real-time-risk-analytics-platform-for-financial-1745422491501.txt  Pasted-New-Features-to-Add-1-User-Facing-Mobile-Integration-Feature-In-App-Fraud-Alerts-Push-notifi-1745423735505.txt  Pasted-Problem-Statement-Refinement-Objective-Build-an-AI-powered-fraud-detection-system-for-real-time-p-1745422430110.txt
data/: compliance.csv  counterparties.csv  market_data.csv  relationships.csv  transactions.csv
models/: impact_predictor.pkl  risk_classifier.pkl
pages/: 10_Smart_Suggestions.py  1_Dashboard.py  2_Counterparty_Risk.py  3_Market_Exposure.py  4_Compliance.py  5_AI_Insights.py  6_Stress_Testing.py  7_Alerts.py  8_Mobile_Notifications.py  9_Account_Security.py
utils/: account_security.py  compliance.py  data_generator.py  notification_service.py  openai_helper.py  risk_calculations.py  risk_prediction.py  session_helper.py  visualization.py
